[gd_scene load_steps=4 format=3 uid="uid://c62nj40j07xei"]

[ext_resource type="Script" path="res://plugins/touch/scenes/touch.gd" id="1_fhsw0"]
[ext_resource type="Theme" uid="uid://duea6v8sw5cfx" path="res://themes/main_theme.tres" id="3"]
[ext_resource type="Script" path="res://plugins/touch/scenes/touch_device_options.gd" id="4"]

[node name="Touch" type="Control"]
custom_minimum_size = Vector2(752, 24)
layout_mode = 3
anchors_preset = 0
offset_right = 752.0
offset_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_fhsw0")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ControlsSeparator" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="TouchDeviceOptions" type="OptionButton" parent="CenterContainer/ControlsSeparator"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
alignment = 1
script = ExtResource("4")

[node name="ReconnectButton" type="Button" parent="CenterContainer/ControlsSeparator"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3")
text = "Reconnect"

[node name="GrabCheckButton" type="CheckButton" parent="CenterContainer/ControlsSeparator"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3")
button_pressed = true
text = "Grabbed"

[connection signal="item_selected" from="CenterContainer/ControlsSeparator/TouchDeviceOptions" to="CenterContainer/ControlsSeparator/TouchDeviceOptions" method="_on_DeviceOptions_item_selected"]
[connection signal="pressed" from="CenterContainer/ControlsSeparator/ReconnectButton" to="." method="_on_reconnect_button_pressed"]
[connection signal="toggled" from="CenterContainer/ControlsSeparator/GrabCheckButton" to="." method="_on_grab_check_button_toggled"]
